--- a/styles/hobby.css
+++ b/styles/hobby.css
@@ -138,7 +138,7 @@ body {
 }
 .slider-wrapper {
   position: relative;
-  max-width: 48rem;
+  max-width: 38rem;
   margin: 0 auto;
 }
 .slider {
@@ -156,7 +156,7 @@ body {
   padding-right: 20px;
 }
 .slider img {
-  height: 350px;
+  height: 200px;
   flex: 0 0 100%;
   scroll-snap-align: start;
   object-fit: contain;
@@ -166,8 +166,8 @@ body {
   /* column-gap: 1rem; */
   position: absolute;
   bottom: 1.25rem;
-  left: 50%;
-  transform: translateX(-50%);
+  left: 30%;
+  transform: translateX(-30%);
   z-index: 1;
 }
 .slider-nav a {
@@ -183,33 +183,9 @@ body {
   opacity: 1;
 }
 @media screen and (min-width: 200px) and (max-width: 768px) {
-  .container-1 {
-    padding: 2rem;
-  }
-  .slider-wrapper {
-    position: relative;
-    max-width: 48rem;
-    margin: 0 auto;
-  }
-
-  .slider img {
-    height: 350px;
-    flex: 0 0 100%;
-    scroll-snap-align: start;
-    object-fit: contain;
-  }
-  .slider-nav {
-    display: flex;
-    /* column-gap: 1rem; */
-    position: absolute;
-    bottom: 1.25rem;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 1;
-  }
-  .slider-nav a {
-    width: 0.5rem;
-    height: 0.5rem;
-    border-radius: 50%;
+  .container-1 .slider img {
+    width: 50%;
+    padding: 5px;
+    left: 20%;
   }
 }
